system/authentik/resources/middleware-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-internal-headers
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
