system/authentik/resources/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-headers
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      X-Frame-Options: "ALLOW"
      Content-Security-Policy: "frame-ancestors 'self' https://nextcloud.jg1g.com"
