system/authentik/resources/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: authentik
  namespace: authentik
spec:
  virtualhost:
    fqdn: auth.jg1g.com
    tls:
      secretName: authentik-tls
      minimumProtocolVersion: "1.3"
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    requestHeadersPolicy:
      set:
        - name: X-Forwarded-For
          value: "%REQ(X-Forwarded-For)%"
        - name: X-Forwarded-Proto
          value: "%REQ(:scheme)%"
    responseHeadersPolicy:
      set:
        - name: X-Frame-Options
          value: ALLOW
        - name: Content-Security-Policy
          value: frame-ancestors 'self' https://nextcloud.jg1g.com
    services:
    - name: authentik-server
      port: 80
